# lcmodmanager

./: .env  .gitignore  Cargo.toml  README.md  flake.nix
src/: grab.rs  main.rs  steam.rs  util.rs
