[package]
name = "lcmodmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
error-chain = "0.12.4"
flate2 = "1.0.28"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
tar = "0.4.40"
tempdir = "0.3.7"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
clap = { version = "4.4.11", features = ["derive"] }
fs_extra = "1.3.0"

[target.x86_64-pc-windows-gnu]
linker = "C:\\msys2\\mingw64\\bin\\gcc.exe"
ar = "C:\\msys2\\mingw64\\bin\\ar.exe"