[package]
name = "lcmodmanager"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
flate2 = "1.0.28"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
tar = "0.4.40"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
clap = { version = "4.4.11", features = ["derive"] }
fs_extra = "1.3.0"
data-encoding = "2.5.0"
ring = "0.17.7"
